SimpleComplex/Utils 1.x, 2018-05-29
-----------------------------------
- Time class renamed; from DateTimeSimple.

SimpleComplex/Utils 1.x, 2018-05-27
-----------------------------------
- DateTimeSimple override \DateTime::setTime() to support (though ignore)
  $microseconds argument.
- DateTimeSimple::setToDateStart().
- Explorable::explorablesAutoDefine() auto-generates list of explorable
  properties.
- ExplorableGetSetTrait.

SimpleComplex/Utils 1.x, 2018-05-25
-----------------------------------
- Chainable freeze().
- DateTime extension (DateTimeSimple) with Javascript-like getters
  and stringable.

SimpleComplex/Utils 1.x, 2018-05-23
-----------------------------------
- FreezableInterface.
- ExplorableFreezable renamed (from Freezable), supports reserving more
  non-explorable properties, freezes recursively, and unfreezes clone.
- Freezable DateTime extension.

SimpleComplex/Utils 1.x, 2018-05-21
-----------------------------------
- phpunit test helpers.
- Release 1.4.

SimpleComplex/Utils 1.x, 2018-05-20
-----------------------------------
- Freezable explorable object.
- Prevent dupe bootstrapping.

SimpleComplex/Utils 1.x, 2018-05-05
-----------------------------------
- Bootstrap prepare dependencies if exist.

SimpleComplex/Utils 1.x, 2018-04-25
-----------------------------------
- Unicode use function to check for Intl support; class_exist() is lethal
  if using rubbish spl_autoload.
- Release 1.3.

SimpleComplex/Utils 1.x, 2018-04-19
-----------------------------------
- CLI utils-execute should log exception trace.

SimpleComplex/Utils 1.x, 2018-04-19
-----------------------------------
- Dependency try locating external container before resorting to internal
  container.
  Current support only global Slim\App\Container $app, but extendable.
- Release 1.3.

SimpleComplex/Utils 1.x, 2018-04-11
-----------------------------------
- CLI utils-execute support 'yes'/-y pre-confimation
  when combined with 'force'/-f option.
